--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.8.1",
     "formik": "^2.4.6",
     "init": "^0.1.2",
+    "js-cookie": "^3.0.5",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
