--- a/.env
+++ b/.env
@@ -8,5 +8,7 @@ VITE_URL_APIPYTHON=http://localhost:5000/auth/
 VITE_URL_BACKEND_EXPRESSJS_API=http://localhost:3000/apiuser/
 
 
-VITE_URL_BACKEND_EXPRESSJS_API_SERVER=https://almacen_igecem.edomex.gob.mx/apiuser/
+# VITE_URL_BACKEND_EXPRESSJS_API_SERVER=https://almacen_igecem.edomex.gob.mx/apiuser/
+VITE_URL_BACKEND_EXPRESSJS_API_SERVER=https://almacen_igecem.edomex.gob.mx/
+# VITE_URL_BACKEND_EXPRESSJS_API_SERVER=https://microexpressjs-production.up.railway.app/
 
